crates/pvm-contract-macros/tests/ui/view_caller_calls_nonpayable_callee.stderr
error[E0308]: mismatched types
  --> tests/ui/view_caller_calls_nonpayable_callee.rs:36:21
   |
36 |             cb.call(self)?;
   |                ---- ^^^^ types differ in mutability
   |                |
   |                arguments to this method are incorrect
   |
   = note: expected mutable reference `&mut _`
                      found reference `&Caller`
note: method defined here
  --> tests/ui/view_caller_calls_nonpayable_callee.rs:7:1
   |
 7 | / pvm_contract_sdk::abi_import! {
 8 | |     #![abi_import(alloc = true)]
 9 | |     // SPDX-License-Identifier: MIT
10 | |     pragma solidity ^0.8.0;
...  |
16 | | }
   | |_^
   = note: this error originates in the macro `pvm_contract_sdk::abi_import` (in Nightly builds, run with -Z macro-backtrace for more info)
